--- a/notebooks/nosql_lesson.ipynb
+++ b/notebooks/nosql_lesson.ipynb
@@ -1842,6 +1842,92 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upstream\n",
+      "Comment count: 3\n",
+      " * Jordan Medina: Adipisci vel dolores tenetur sit inventore. Doloribus dolor nesciunt voluptas saepe veritatis. Mollitia eum iure ut nam.\n",
+      " * Theresa Holmes: Unde ut eum doloremque expedita commodi exercitationem. Error soluta temporibus quasi. Libero quam nulla mollitia officia ipsa. Odio harum cupiditate a dignissimos.\n",
+      " * Mace Tyrell: Assumenda quibusdam vel reprehenderit error. Optio voluptatibus maxime tempore velit. Architecto modi possimus officia minima eum quis quis.\n",
+      "\n",
+      "The Wizard of Oz\n",
+      "Comment count: 139\n",
+      " * Andrea Le: Odit corporis eveniet dicta itaque maiores fugit nihil. Similique vitae nulla consectetur esse consequatur consectetur. Doloribus nostrum labore vitae.\n",
+      " * Ashlee Hart: Consequatur odio nesciunt quas reiciendis amet. Perferendis dolorum atque fugit modi. Nesciunt atque repudiandae rem reiciendis possimus atque omnis. Ex facilis consequatur iusto.\n",
+      " * Beric Dondarrion: Qui illo praesentium quam ullam ad distinctio vitae. Minima pariatur dolorum assumenda dicta tempora unde.\n",
+      " * Amy Phillips: Tempora ullam dignissimos tenetur possimus cum fuga amet laborum. Enim voluptatum voluptatem eum assumenda corrupti dolore quia quis. Ut eligendi provident neque.\n",
+      " * Anthony Smith: Iusto occaecati dolorem consequuntur fugit reprehenderit dicta odio. Quis ratione voluptatem consequuntur rem nihil sequi nostrum. Alias illo cupiditate reprehenderit dicta.\n",
+      "\n",
+      "Occupe-toi d'Amèlie..!\n",
+      "Comment count: 3\n",
+      " * Lancel Lannister: Ea quisquam qui corrupti deserunt. Aliquid eligendi adipisci fuga corrupti debitis. Voluptatem ipsam alias voluptatum similique quae pariatur suscipit. Provident eaque dicta provident autem.\n",
+      " * Pypar: Quam asperiores consectetur quos non. Animi corporis repellat nisi amet velit cupiditate. Cumque perferendis facilis at cum suscipit fugiat ut.\n",
+      " * Elizabeth Wiggins: Maiores excepturi ipsum vero. Voluptates maiores fugit harum omnis. Eius deserunt delectus ipsa. Illo non impedit est vitae omnis corrupti debitis.\n",
+      "\n",
+      "Cinderella\n",
+      "Comment count: 153\n",
+      " * April Cole: Ipsum fugit sunt ratione tempore architecto molestias. Temporibus quam deleniti adipisci hic nulla. Consequatur ducimus expedita earum possimus ratione pariatur quibusdam rerum.\n",
+      " * Amy Phillips: Alias magnam fugiat dolorem provident quas minus. Itaque facilis necessitatibus necessitatibus. Soluta labore omnis magni magni. Repudiandae in quibusdam ipsam quisquam odit ut aperiam.\n",
+      " * Amy Phillips: At ut sequi vel. Deleniti totam blanditiis beatae. Incidunt dicta illum eaque laudantium voluptatem a optio. Dolores ab odit beatae omnis.\n",
+      " * Amy Phillips: Consequatur temporibus cum incidunt dignissimos. Eveniet facilis consequatur architecto consequatur aliquam necessitatibus. Fugit amet at molestiae provident nam.\n",
+      " * Anthony Hurst: Beatae amet nesciunt aut molestiae minima. Explicabo quaerat suscipit dolor non hic. Animi voluptates odio debitis cum aut facilis. Quis ea ea doloremque nesciunt eveniet.\n",
+      "\n",
+      "Chronicle of Poor Lovers\n",
+      "Comment count: 3\n",
+      " * Emily Ellis: Quidem fugit ab quisquam totam. Quasi quas aspernatur suscipit aliquam veritatis. Earum excepturi minima reiciendis eius temporibus occaecati.\n",
+      " * John Roman: Possimus magni maiores non. Nemo quia tempora officiis iste possimus provident. Sunt maiores omnis quia laborum.\n",
+      " * Jerry Cabrera: Harum rem impedit consequuntur explicabo illum id soluta magnam. Ad sapiente asperiores est magni. Consequatur ipsam incidunt tempore quisquam velit autem assumenda. Aliquid repudiandae fugiat et.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "pipeline = [\n",
+    "    {\n",
+    "        \"$lookup\": {\n",
+    "            \"from\": \"comments\", # the collection to lookup and join with \n",
+    "            \"localField\": \"_id\", # id in movies collection to use to match in comments collection\n",
+    "            \"foreignField\": \"movie_id\", # the movie id in the comments collection\n",
+    "            \"as\": \"related_comments\", # new field name to store the related comments in movies collection\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$addFields\": {\n",
+    "            \"comment_count\": {\"$size\": \"$related_comments\"}\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$match\": {\n",
+    "            \"comment_count\": {\n",
+    "                \"$gte\": 3,\n",
+    "            }\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$limit\": 5 # have to limit or it will time out\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "results = movies.aggregate(pipeline)\n",
+    "for movie in results:\n",
+    "   print(movie[\"title\"])\n",
+    "   print(\"Comment count:\", movie[\"comment_count\"])\n",
+    "\n",
+    "   for comment in movie[\"related_comments\"][:5]:\n",
+    "         print(\" * {name}: {text}\".format(\n",
+    "            name=comment[\"name\"],\n",
+    "            text=comment[\"text\"]))\n",
+    "   print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
    "outputs": [
