--- a/notebooks/nosql_assignment.ipynb
+++ b/notebooks/nosql_assignment.ipynb
@@ -718,6 +718,33 @@
     "            text=comment[\"text\"]))\n",
     "   print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a54735d8",
+   "metadata": {},
+   "source": [
+    "### Alternative Answer to Question 3 without listing out comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1465769e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "385\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = movies.count_documents({\"num_mflix_comments\": {\"$gte\": 3}})\n",
+    "print(count)"
+   ]
   }
  ],
  "metadata": {
